fixed add method